# quark-libmalloc

./: .gitignore  README.md  configure.ac
include/: Makefile.am  util.h
include/libmalloc/: bitmap_alloc.h  buddy_alloc.h  common.h  list_alloc.h  memmap.h
src/: Makefile.am  bitmap_alloc.c  buddy_alloc.c  list_alloc.c  memmap.c
tests/: Makefile.am  test_bitmapalloc.c  test_buddyalloc.c  test_listalloc  test_listalloc.c
