if BUILD_TESTS
    noinst_PROGRAMS = test_bitmapalloc test_buddyalloc test_listalloc

    test_bitmapalloc_SOURCES = test_bitmapalloc.c
    test_bitmapalloc_LDADD = ../src/libmalloc.a

    test_buddyalloc_SOURCES = test_buddyalloc.c
    test_buddyalloc_LDADD = ../src/libmalloc.a

    test_listalloc_SOURCES = test_listalloc.c
    test_listalloc_LDADD = ../src/libmalloc.a
endif